# imagehost-api

./: .gitignore  Cargo.toml  Config.example copy.toml  Config.example.toml  LICENSE  README.md  private-key-file  public-key-file
api/: Cargo.toml
api/src/: lib.rs
api/src/infrastructure/: mod.rs
api/src/infrastructure/common/: biscuit.rs  hashing.rs  mod.rs  validator.rs
api/src/infrastructure/http/: error.rs  response.rs
api/src/infrastructure/middleware/: biscuit.rs
api/src/infrastructure/repository/: access_token.rs  credential.rs  mod.rs  user.rs
api/src/infrastructure/service/: oauth.rs
api/src/routes/: mod.rs
api/src/routes/auth/: login.rs  mod.rs  signup.rs
api/src/routes/file/: mod.rs  upload.rs
api/src/routes/oauth/: authorize.rs  mod.rs  redirect.rs
configurator/src/: lib.rs
entity/src/entities/: access_token.rs  credential.rs  file.rs  user.rs
migration/src/: lib.rs
migration/src/migrations/: m20250120_192657_user.rs  m20250120_193033_access_token.rs  m20250120_193056_credential.rs  m20250120_193117_file.rs  m20250313_205730_deletable.rs  mod.rs
src/: logging.rs  main.rs
