[package]
name = "api"
description = "The main API of kythi"
edition = "2021"

version.workspace = true
authors.workspace = true

[dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sea-orm = { workspace = true }
actix-di = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
humantime = { workspace = true }
actix-web-httpauth = { workspace = true }
futures-util = { workspace = true }
derive_more = { workspace = true }
biscuit-auth = { workspace = true }

configurator = { path = "../configurator" }
database = { path = "../database" }
entity = { path = "../entity" }
